--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
+    "sass": "^1.66.1",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
